# capp_log_parser

./: Cargo.toml  README.md  build_and_run.sh  build_release.sh
src/: main.rs
test/: README.md  config.json
