[package]
name = "capp_log_parser"
version = "0.1.0"
authors = ["hightemp"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.16"
serde_json = "1.0.57"
serde = { version = "1.0", features = ["derive"] }
regex = "1.1.9"
chrono = "0.4"
libmath = "0.1.4"